datasets/v1/coverage-report.md
# Coverage Report — validation dataset v1

> Generated by `scripts/build_v1_dataset.py`. Total: **60** records.

## Summary

| Metric | Value |
|--------|-------|
| Total records | 60 |
| Extraction | 24 |
| Synthesis | 36 |
| B2C segment | 57 |
| B2B segment | 3 |

## Taxonomy groups (G1–G8)

| Group | Count | Target v1 |
|-------|-------|-----------|
| G1 | 12 | 12 ✅ |
| G2 | 12 | 12 ✅ |
| G3 | 8 | 8 ✅ |
| G4 | 4 | 4 ✅ |
| G5 | 4 | 4 ✅ |
| G6 | 4 | 4 ✅ |
| G7 | 12 | 12 ✅ |
| G8 | 4 | 4 ✅ |

## Dataset types

| Type | Count |
|------|-------|
| T1 | 14 |
| T2 | 18 |
| T3 | 11 |
| T4 | 5 |
| T5 | 4 |
| T6 | 8 |

## By source branch × group

| Group | extraction | synthesis |
|-------|------------|-----------|
| G1 | 5 | 7 |
| G2 | 4 | 8 |
| G3 | 3 | 5 |
| G4 | 3 | 1 |
| G5 | 1 | 3 |
| G6 | 2 | 2 |
| G7 | 4 | 8 |
| G8 | 2 | 2 |

## T6 tool-use coverage

| Tool | Records |
|------|---------|
| `confirm_payment` | 1 |
| `create_payment_link` | 4 |
| `save_lead` | 3 |
